<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#EAEAEA" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/thursday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/thursday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/calendar_color_black"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cal_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_year"
            android:textSize="20sp"
            android:textColor="#6CA6CD" />

        <TextView
            android:id="@+id/tv_cal_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_month"
            android:textSize="20sp"
            android:textColor="#6CA6CD" />
    </LinearLayout>
    
     <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#000000" />
</LinearLayout>
