<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.llc.android_coolview.MainActivity" >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/weather_location"
        android:icon="@drawable/ofm_group_chat_icon"
        android:title="@string/weather_location"/>
    <item
        android:id="@+id/weather_city"
        android:icon="@drawable/ofm_add_icon"
        android:title="@string/weather_city"/>
    <item
        android:id="@+id/weather_city_detail"
        android:icon="@drawable/ofm_qrcode_icon"
        android:title="@string/weather_city_detail"/>
</menu>
