<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.llc.android_coolview.MainActivity" >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/the_train_number_query_this_train_schedule"
        android:icon="@drawable/ofm_group_chat_icon"
        android:title="@string/the_train_number_query_this_train_schedule"/>
    <item
        android:id="@+id/the_station_and_arrival_station_query_train_schedules"
        android:icon="@drawable/ofm_add_icon"
        android:title="@string/the_station_and_arrival_station_query_train_schedules"/>
    <item
        android:id="@+id/the_train_number_query_train_through_the_detail_at_the_station"
        android:icon="@drawable/ofm_qrcode_icon"
        android:title="@string/the_train_number_query_train_through_the_detail_at_the_station"/>
</menu>
