<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/list_item_bg"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/history_startstation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beijing"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/time_line"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/history_endstation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhengdingjichang"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>