<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/station_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/input_startstation"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/list_item_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_station"
                android:textColor="@color/ltgray"
                android:textSize="@dimen/start_or_last" />

            <TextView
                android:id="@+id/start_staion_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/beijing"
                android:textColor="@color/titleColor"
                android:textSize="22sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/change_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/jiantou" />

        <LinearLayout
            android:id="@+id/input_laststation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/list_item_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/last_station"
                android:textColor="@color/ltgray"
                android:textSize="@dimen/start_or_last" />

            <TextView
                android:id="@+id/last_station_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:text="@string/zhengdingjichang"
                android:textColor="@color/titleColor"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_divider"
        android:layout_below="@id/station_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/black_divider" />

    <RelativeLayout
        android:id="@+id/start_date_time"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/list_item_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/start_date"
            android:textColor="@color/ltgray"
            android:textSize="@dimen/start_or_last" />

        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/today"
            android:textColor="@color/oranage"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/week"
            android:layout_centerVertical="true"
            android:text="@string/tickets_date_hint"
            android:textColor="@color/date"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_divider"
        android:layout_below="@id/start_date_time"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black_divider" />

    <RelativeLayout
        android:id="@+id/train_detail"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/list_item_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/train_detail"
            android:textColor="@color/ltgray"
            android:textSize="@dimen/start_or_last" />

        <TextView
            android:id="@+id/train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/all_train"
            android:textColor="@color/date"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_divider"
        android:layout_below="@id/train_detail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black_divider" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view3"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/student_search"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/kobe_tickets_search"
            android:gravity="center"
            android:text="@string/student"
            android:textColor="@color/white"
            android:textSize="@dimen/search_train" />

        <TextView
            android:id="@+id/search_start_last_station"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/kobe_tickets_search"
            android:gravity="center"
            android:text="@string/search_city_name"
            android:textColor="@color/white"
            android:textSize="@dimen/search_train"
            android:clickable="true" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/search_layout" >

        <ListView
            android:id="@+id/common_line_lv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:fadingEdge="none" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/palne_tickets"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/list_item_bg"
                android:gravity="center"
                android:text="@string/palne_ticktes"
                android:textSize="@dimen/search_train"
                android:textColor="@color/black" />
			
            <TextView
                android:id="@+id/hotel_ticktes"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/list_item_bg"
                android:gravity="center"
                android:text="@string/hoetl_ticktes"
                android:textSize="@dimen/search_train"
                android:textColor="@color/black" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>