<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/weatherinfo_sms_background" >
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/city_name" />

        <EditText
            android:id="@+id/input_city_name"
            android:layout_width="fill_parent"
            android:layout_height="36dip"
            android:layout_margin="10dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/input_city_name"
            android:padding="5dip"
            android:singleLine="true"
            android:textColorHint="#AAAAAA" >
            <requestFocus />
        </EditText>
    </LinearLayout>
    <Button 
	    android:id="@+id/search_city_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginRight="10dp"
	    android:text="@string/search_city_name"/>
</LinearLayout>
