<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:llc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/activity_toolbar" />
    
	<android.support.v4.view.ViewPager
	    android:id="@+id/viewpager"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	</android.support.v4.view.ViewPager>
	<LinearLayout 
	    android:id="@+id/main_bottom_menu"
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:background="@drawable/tabbg"
	    android:orientation="horizontal">
	    
	    <com.llc.android_coolview.kobe.view.imageview.ChageColorIconView 
	        android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            llc:cool_icon="@drawable/ic_menu_start_conversation"
            llc:cool_text="@string/tab_news"
            llc:cool_text_size="12sp"/>
	    <com.llc.android_coolview.kobe.view.imageview.ChageColorIconView 
	        android:id="@+id/id_indicator_two"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="5dp"
	        llc:cool_icon="@drawable/ic_menu_friendslist"
	        llc:cool_text="@string/tab_sports"
	        llc:cool_text_size="12sp"/>
	    <com.llc.android_coolview.kobe.view.imageview.ChageColorIconView 
	        android:id="@+id/id_indicator_three"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="5dp"
	        llc:cool_icon="@drawable/ic_menu_emoticons"
	        llc:cool_text="@string/tab_weather"
	        llc:cool_text_size="12sp"/>
	    <com.llc.android_coolview.kobe.view.imageview.ChageColorIconView 
	        android:id="@+id/id_indicator_four"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="5dp"
	        llc:cool_icon="@drawable/ic_menu_allfriends"
	        llc:cool_text="@string/tab_ticket"
	        llc:cool_text_size="12sp"/>
	</LinearLayout>
</LinearLayout>
